Bug 321657 - KDE Software Center Crash while clicking on the Firefox Installer
Summary: KDE Software Center Crash while clicking on the Firefox Installer
Status: RESOLVED FIXED
Alias: None
Product: muon
Classification: Unmaintained
Component: installer (other bugs)
Version First Reported In: 2.0.1
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Jonathan Thomas
URL:
Keywords:
: 320230 322665 324074 325772 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-06-26 23:07 UTC by Rainer Krämer
Modified: 2015-01-15 15:16 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rainer Krämer 2013-06-26 23:07:29 UTC
Application: muon-installer (2.0.1)
KDE Platform Version: 4.10.3
Qt Version: 4.8.4
Operating System: Linux 3.8.0-25-generic i686
Distribution: Ubuntu 13.04

-- Information about the crash:
- What I was doing when the application crashed:
The KDE Software Center crashed while clicking on the Firefox Installer. Kubuntu 13.04.

-- Backtrace:
Application: Muon-Programmverwaltung (muon-installer), signal: Segmentation fault
Using host libthread_db library "/lib/i386-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0xb3d09980 (LWP 2087))]

Thread 2 (Thread 0xb0281b40 (LWP 2096)):
#0  0xb46d0d16 in g_mutex_lock () from /lib/i386-linux-gnu/libglib-2.0.so.0
#1  0xb468cd2b in g_main_context_prepare () from /lib/i386-linux-gnu/libglib-2.0.so.0
#2  0xb468d5cf in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#3  0xb468d831 in g_main_context_iteration () from /lib/i386-linux-gnu/libglib-2.0.so.0
#4  0xb5da3c3f in QEventDispatcherGlib::processEvents (this=0xaf900468, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#5  0xb5d703ec in QEventLoop::processEvents (this=this@entry=0xb0281228, flags=...) at kernel/qeventloop.cpp:149
#6  0xb5d706e1 in QEventLoop::exec (this=this@entry=0xb0281228, flags=...) at kernel/qeventloop.cpp:204
#7  0xb5c5bfec in QThread::exec (this=this@entry=0x9b83f78) at thread/qthread.cpp:542
#8  0xb5d4ff2d in QInotifyFileSystemWatcherEngine::run (this=0x9b83f78) at io/qfilesystemwatcher_inotify.cpp:256
#9  0xb5c5eb18 in QThreadPrivate::start (arg=0x9b83f78) at thread/qthread_unix.cpp:338
#10 0xb4765d78 in start_thread () from /lib/i386-linux-gnu/libpthread.so.0
#11 0xb5a4c3de in clone () from /lib/i386-linux-gnu/libc.so.6

Thread 1 (Thread 0xb3d09980 (LWP 2087)):
[KCrash Handler]
#7  KNSResource::setStatus (this=this@entry=0x0, status=KNS3::Entry::Downloadable) at /build/buildd/muon-2.0.1/libmuon/backends/KNSBackend/KNSResource.cpp:62
#8  0xb1445f8a in KNSResource::setEntry (this=0x0, entry=...) at /build/buildd/muon-2.0.1/libmuon/backends/KNSBackend/KNSResource.cpp:125
#9  0xb14425d7 in KNSBackend::receivedEntries (this=this@entry=0x9960c40, entries=...) at /build/buildd/muon-2.0.1/libmuon/backends/KNSBackend/KNSBackend.cpp:176
#10 0xb14410c7 in KNSBackend::qt_static_metacall (_o=0x9960c40, _c=QMetaObject::InvokeMetaMethod, _id=0, _a=0xbf8a3d28) at /build/buildd/muon-2.0.1/obj-i686-linux-gnu/libmuon/backends/KNSBackend/moc_KNSBackend.cpp:57
#11 0xb5d87b56 in QMetaObject::activate (sender=sender@entry=0x995e008, m=m@entry=0xb123f1f8 <KNS3::DownloadManager::staticMetaObject>, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0xbf8a3d28) at kernel/qobject.cpp:3539
#12 0xb11e6f15 in KNS3::DownloadManager::searchResult (this=0x995e008, _t1=...) at ./downloadmanager.moc:113
#13 0xb11e71ea in KNS3::DownloadManager::Private::_k_slotEntriesLoaded (this=0x995b9b8, entries=...) at ../../../knewstuff/knewstuff3/downloadmanager.cpp:117
#14 0xb11e74ba in KNS3::DownloadManager::qt_static_metacall (_o=0x995e008, _c=QMetaObject::InvokeMetaMethod, _id=4, _a=0xbf8a3e98) at ./downloadmanager.moc:64
#15 0xb5d87b56 in QMetaObject::activate (sender=sender@entry=0x995fc58, m=m@entry=0xb123f418 <KNS3::Engine::staticMetaObject>, local_signal_index=local_signal_index@entry=2, argv=argv@entry=0xbf8a3e98) at kernel/qobject.cpp:3539
#16 0xb11edb05 in KNS3::Engine::signalEntriesLoaded (this=this@entry=0x995fc58, _t1=...) at ./engine.moc:199
#17 0xb11ef983 in KNS3::Engine::slotEntriesLoaded (this=this@entry=0x995fc58, request=..., entries=...) at ../../../knewstuff/knewstuff3/core/engine.cpp:280
#18 0xb11f1653 in qt_static_metacall (_a=0xbf8a4014, _id=20, _o=0x995fc58, _c=<optimized out>) at ./engine.moc:129
#19 KNS3::Engine::qt_static_metacall (_o=0x995fc58, _c=QMetaObject::InvokeMetaMethod, _id=20, _a=0xbf8a4014) at ./engine.moc:103
#20 0xb5d87b56 in QMetaObject::activate (sender=sender@entry=0x9a883e8, m=m@entry=0xb123f50c <KNS3::Provider::staticMetaObject>, local_signal_index=local_signal_index@entry=1, argv=argv@entry=0xbf8a4014) at kernel/qobject.cpp:3539
#21 0xb11ff84d in KNS3::Provider::loadingFinished (this=this@entry=0x9a883e8, _t1=..., _t2=...) at ./provider.moc:125
#22 0xb1216f51 in KNS3::AtticaProvider::categoryContentsLoaded (this=0x9a883e8, job=0x9a228a8) at ../../../knewstuff/knewstuff3/attica/atticaprovider.cpp:230
#23 0xb5d87b56 in QMetaObject::activate (sender=0x9a228a8, m=0xb48a4540 <Attica::BaseJob::staticMetaObject>, local_signal_index=0, argv=0xbf8a41a8) at kernel/qobject.cpp:3539
#24 0xb4818ee5 in Attica::BaseJob::finished(Attica::BaseJob*) () from /usr/lib/i386-linux-gnu/libattica.so.0.4
#25 0xb4819124 in Attica::BaseJob::dataFinished() () from /usr/lib/i386-linux-gnu/libattica.so.0.4
#26 0xb48193fc in ?? () from /usr/lib/i386-linux-gnu/libattica.so.0.4
#27 0xb5d87b56 in QMetaObject::activate (sender=sender@entry=0xa43a338, m=m@entry=0xb562b2e4 <QNetworkReply::staticMetaObject>, local_signal_index=local_signal_index@entry=1, argv=argv@entry=0x0) at kernel/qobject.cpp:3539
#28 0xb55d9e45 in QNetworkReply::finished (this=this@entry=0xa43a338) at .moc/release-shared/moc_qnetworkreply.cpp:166
#29 0xb55da0ec in qt_static_metacall (_a=0xbf8a4454, _id=1, _o=0xa43a338, _c=<optimized out>) at .moc/release-shared/moc_qnetworkreply.cpp:107
#30 QNetworkReply::qt_static_metacall (_o=0xa43a338, _c=QMetaObject::InvokeMetaMethod, _id=1, _a=0xbf8a4454) at .moc/release-shared/moc_qnetworkreply.cpp:100
#31 0xb5d7a7ad in QMetaMethod::invoke (this=0xbf8a4584, object=0xa43a338, connectionType=Qt::DirectConnection, returnValue=..., val0=..., val1=..., val2=..., val3=..., val4=..., val5=..., val6=..., val7=..., val8=..., val9=...) at kernel/qmetaobject.cpp:1664
#32 0xb5d7ce29 in QMetaObject::invokeMethod (obj=obj@entry=0xa43a338, member=member@entry=0xb76a8195 "finished", type=type@entry=Qt::AutoConnection, ret=..., val0=..., val1=..., val2=..., val3=..., val4=..., val5=..., val6=..., val7=..., val8=..., val9=...) at kernel/qmetaobject.cpp:1179
#33 0xb7512a38 in invokeMethod (val9=..., val8=..., val7=..., val6=..., val5=..., val4=..., val3=..., val2=..., val1=..., val0=..., type=type@entry=Qt::AutoConnection, member=0xb76a8195 "finished", obj=0xa43a338) at /usr/include/qt4/QtCore/qobjectdefs.h:418
#34 KDEPrivate::AccessManagerReply::emitFinished (this=this@entry=0xa43a338, state=state@entry=true, type=type@entry=Qt::AutoConnection) at ../../kio/kio/accessmanagerreply_p.cpp:484
#35 0xb7514da8 in KDEPrivate::AccessManagerReply::slotResult (this=0xa43a338, kJob=0xa183288) at ../../kio/kio/accessmanagerreply_p.cpp:427
#36 0xb5d87b56 in QMetaObject::activate (sender=sender@entry=0xa183288, m=m@entry=0xb61a246c <KJob::staticMetaObject>, local_signal_index=local_signal_index@entry=3, argv=argv@entry=0xbf8a49a8) at kernel/qobject.cpp:3539
#37 0xb5feafa5 in KJob::result (this=this@entry=0xa183288, _t1=_t1@entry=0xa183288) at ./kjob.moc:208
#38 0xb5feaff8 in KJob::emitResult (this=this@entry=0xa183288) at ../../kdecore/jobs/kjob.cpp:318
#39 0xb7558c3d in KIO::SimpleJob::slotFinished (this=this@entry=0xa183288) at ../../kio/kio/job.cpp:494
#40 0xb755918d in KIO::TransferJob::slotFinished (this=0xa183288) at ../../kio/kio/job.cpp:1081
#41 0xb7557498 in qt_static_metacall (_a=0xbf8a4bcc, _id=7, _o=0xa183288, _c=<optimized out>) at ./jobclasses.moc:388
#42 KIO::TransferJob::qt_static_metacall (_o=0xa183288, _c=QMetaObject::InvokeMetaMethod, _id=7, _a=0xbf8a4bcc) at ./jobclasses.moc:375
#43 0xb5d87b56 in QMetaObject::activate (sender=sender@entry=0x9cf1cf8, m=m@entry=0xb772a480 <KIO::SlaveInterface::staticMetaObject>, local_signal_index=local_signal_index@entry=4, argv=argv@entry=0x0) at kernel/qobject.cpp:3539
#44 0xb76028e5 in KIO::SlaveInterface::finished (this=this@entry=0x9cf1cf8) at ./slaveinterface.moc:185
#45 0xb7605de3 in KIO::SlaveInterface::dispatch (this=0x9cf1cf8, _cmd=104, rawdata=...) at ../../kio/kio/slaveinterface.cpp:172
#46 0xb760261a in KIO::SlaveInterface::dispatch (this=0x9cf1cf8) at ../../kio/kio/slaveinterface.cpp:88
#47 0xb75f54e8 in KIO::Slave::gotInput (this=this@entry=0x9cf1cf8) at ../../kio/kio/slave.cpp:344
#48 0xb75f5b44 in KIO::Slave::qt_static_metacall (_o=0x9cf1cf8, _c=QMetaObject::InvokeMetaMethod, _id=2, _a=0xbf8a4e7c) at ./slave.moc:57
#49 0xb5d87b56 in QMetaObject::activate (sender=sender@entry=0x9cf3808, m=m@entry=0xb7727110 <KIO::Connection::staticMetaObject>, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x0) at kernel/qobject.cpp:3539
#50 0xb751cc15 in KIO::Connection::readyRead (this=0x9cf3808) at ./connection.moc:106
#51 0xb751d1f8 in dequeue (this=<optimized out>) at ../../kio/kio/connection.cpp:82
#52 KIO::ConnectionPrivate::dequeue (this=0x9b9bf80) at ../../kio/kio/connection.cpp:71
#53 0xb5d83b4a in QMetaCallEvent::placeMetaCall (this=0xa3922b0, object=0x9cf3808) at kernel/qobject.cpp:524
#54 0xb5d8d48b in QObject::event (this=0x9cf3808, e=0xa3922b0) at kernel/qobject.cpp:1194
#55 0xb62e5c7c in QApplicationPrivate::notify_helper (this=0x97bf7c0, receiver=0x9cf3808, e=0xa3922b0) at kernel/qapplication.cpp:4567
#56 0xb62e8b94 in QApplication::notify (this=0xa3922b0, receiver=0x9cf3808, e=0xa3922b0) at kernel/qapplication.cpp:3949
#57 0xb6e5ed01 in KApplication::notify (this=0xbf8a5730, receiver=0x9cf3808, event=0xa3922b0) at ../../kdeui/kernel/kapplication.cpp:311
#58 0xb5d7190e in QCoreApplication::notifyInternal (this=0xbf8a5730, receiver=0x9cf3808, event=0xa3922b0) at kernel/qcoreapplication.cpp:946
#59 0xb5d75721 in sendEvent (event=<optimized out>, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#60 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x97965e0) at kernel/qcoreapplication.cpp:1570
#61 0xb5d75a8c in QCoreApplication::sendPostedEvents (receiver=receiver@entry=0x0, event_type=event_type@entry=0) at kernel/qcoreapplication.cpp:1463
#62 0xb5da3aa4 in sendPostedEvents () at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:236
#63 postEventSourceDispatch (s=0x97ba9f0) at kernel/qeventdispatcher_glib.cpp:279
#64 0xb468d3b3 in g_main_context_dispatch () from /lib/i386-linux-gnu/libglib-2.0.so.0
#65 0xb468d750 in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#66 0xb468d831 in g_main_context_iteration () from /lib/i386-linux-gnu/libglib-2.0.so.0
#67 0xb5da3c21 in QEventDispatcherGlib::processEvents (this=this@entry=0x9797390, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#68 0xb639ca5a in QGuiEventDispatcherGlib::processEvents (this=0x9797390, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#69 0xb5d703ec in QEventLoop::processEvents (this=this@entry=0xbf8a5658, flags=...) at kernel/qeventloop.cpp:149
#70 0xb5d706e1 in QEventLoop::exec (this=this@entry=0xbf8a5658, flags=...) at kernel/qeventloop.cpp:204
#71 0xb5d763fa in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1218
#72 0xb62e3fc4 in QApplication::exec () at kernel/qapplication.cpp:3828
#73 0x0805d85b in main (argc=1, argv=0xbf8a5804) at /build/buildd/muon-2.0.1/installer/main.cpp:71

This bug may be a duplicate of or related to bug 320230.

Possible duplicates by query: bug 320230.

Reported using DrKonqi
Comment 1 Jekyll Wu 2013-06-27 01:33:07 UTC
*** Bug 320230 has been marked as a duplicate of this bug. ***
Comment 2 Jekyll Wu 2013-07-22 01:30:55 UTC
*** Bug 322665 has been marked as a duplicate of this bug. ***
Comment 3 Jekyll Wu 2013-08-27 01:43:58 UTC
*** Bug 324074 has been marked as a duplicate of this bug. ***
Comment 4 Jekyll Wu 2013-10-08 14:43:30 UTC
*** Bug 325772 has been marked as a duplicate of this bug. ***
Comment 5 Aleix Pol 2015-01-15 14:30:20 UTC
Git commit 3b2bf4e54e05f15c32e29ea509ea2897ec3f4ccf by Aleix Pol.
Committed on 15/01/2015 at 14:25.
Pushed by apol into branch 'Plasma/5.2'.

Make sure we don't get null entries.

M  +4    -1    libmuon/backends/KNSBackend/KNSBackend.cpp

http://commits.kde.org/muon/3b2bf4e54e05f15c32e29ea509ea2897ec3f4ccf
Comment 6 Aleix Pol 2015-01-15 15:16:26 UTC
Git commit 32dfd61bbc52d980b9155706cf2180b034142db3 by Aleix Pol.
Committed on 15/01/2015 at 14:25.
Pushed by apol into branch 'master'.

Make sure we don't get null entries.

M  +4    -1    libmuon/backends/KNSBackend/KNSBackend.cpp

http://commits.kde.org/muon/32dfd61bbc52d980b9155706cf2180b034142db3