Make sure we don't get null entries.

BUG: 321657